--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>main Heading - Dev1</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 </body>
 </html>
