--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Main Heading - Dev2</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
 
+    <h2>Sub-heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur.</p>
 </body>
 </html>
